deadlock or not? This topic added

--- a/index.html
+++ b/index.html
@@ -290,6 +290,23 @@
     <div class="gallery-container">
         <div class="card">
             <div class="thumbnail-box">
+                <img src="assets/images/deadlock_detection.png" alt="Deadlock Or Not?" loading="lazy">
+            </div>
+            <div class="card-content">
+                <h2 class="card-title">Deadlock or Not?</h2>
+                <p class="card-desc">An interactive visualization showing if a process can be executed without causing a deadlock.</p>
+                <div class="card-actions">
+                    <a href="deadlock_or_not.html" class="view-btn">Live Demo &rarr;</a>
+                    <!-- <a href="https://youtu.be/kgQ8NN1S2z8" target="_blank" rel="noopener" class="video-link-btn">
+                        <svg viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg>
+                        Explanation
+                    </a> -->
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="thumbnail-box">
                 <img src="assets/images/deadlock.png" alt="Deadlock Simulation" loading="lazy">
             </div>
             <div class="card-content">
