--- a/pages/OperatingSystem/paging_numerical.html
+++ b/pages/OperatingSystem/paging_numerical.html
@@ -179,10 +179,39 @@ button:hover{
   color:#facc15;
   font-family:Fira Code;
 }
+
+.back-home-btn {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  padding: 10px 16px;
+  background: linear-gradient(135deg, #2c3e50, #34495e);
+  color: #fff;
+  border: none;
+  border-radius: 25px;
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  transition: all 0.2s ease;
+  z-index: 1000;
+}
+
+  .back-home-btn:hover {
+  transform: translateX(-3px);
+  box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+  }
+
+  .back-home-btn:active {
+  transform: scale(0.95);
+  }
 </style>
 </head>
 
 <body>
+<button class="back-home-btn" onclick="goHome()">
+    ⬅ Back to Home
+</button>
 
 <h1>Paging — Visual Mind Solver</h1>
 <div class="subtitle">4GB Logical | 64MB Physical | 4KB Page</div>
@@ -236,6 +265,11 @@ for(let i=0;i<25;i++){
 
 const logicBlocks = document.querySelectorAll(".logic .block");
 const physBlocks  = document.querySelectorAll(".phys .block");
+
+function goHome() {
+    window.location.href = "../../index.html"; // change if needed
+    // OR use: window.history.back();
+}
 
 function reset(){
   logicBlocks.forEach(b=>b.classList.remove("active"));
