--- a/pages/OperatingSystem/segment_hardware.html
+++ b/pages/OperatingSystem/segment_hardware.html
@@ -366,7 +366,7 @@
         }
 
         function goHome() {
-            window.location.href = "index.html"; // change if needed
+            window.location.href = "../../index.html"; // change if needed
             // OR use: window.history.back();
         }
 
