--- a/index.html
+++ b/index.html
@@ -90,10 +90,20 @@
         }
 
         h1 {
-            font-size: 3.5rem;
+            font-size: 4rem;
             letter-spacing: -1px;
             margin-bottom: 1rem;
             background: linear-gradient(135deg, var(--text-main) 30%, var(--accent-color));
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        h3 {
+            font-size: 2.5rem;
+            letter-spacing: -1px;
+            margin-bottom: 1rem;
+            background: linear-gradient(135deg, var(--text-main) 30%, var(--accent-color));
+            background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
@@ -286,7 +296,8 @@
             Subscribe to Channel
         </a>
     </header>
-
+    <br>
+    <h3>Operating Systems</h3>
     <div class="gallery-container">
         <div class="card">
             <div class="thumbnail-box">
@@ -296,7 +307,7 @@
                 <h2 class="card-title">Segment Hardware</h2>
                 <p class="card-desc">An interactive visualization showing how segmentation hardware works in memory management.</p>
                 <div class="card-actions">
-                    <a href="segment_hardware.html" class="view-btn">Live Demo &rarr;</a>
+                    <a href="pages/OperatingSystem/segment_hardware.html" class="view-btn">Live Demo &rarr;</a>
                     <!-- <a href="https://youtu.be/kgQ8NN1S2z8" target="_blank" rel="noopener" class="video-link-btn">
                         <svg viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg>
                         Explanation
@@ -313,7 +324,7 @@
                 <h2 class="card-title">Disk Scheduling</h2>
                 <p class="card-desc">An interactive visualization showing different algorithms for disk scheduling.</p>
                 <div class="card-actions">
-                    <a href="disk_scheduling.html" class="view-btn">Live Demo &rarr;</a>
+                    <a href="pages/OperatingSystem/disk_scheduling.html" class="view-btn">Live Demo &rarr;</a>
                     <!-- <a href="https://youtu.be/kgQ8NN1S2z8" target="_blank" rel="noopener" class="video-link-btn">
                         <svg viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg>
                         Explanation
@@ -330,7 +341,7 @@
                 <h2 class="card-title">Deadlock or Not?</h2>
                 <p class="card-desc">An interactive visualization showing if a process can be executed without causing a deadlock.</p>
                 <div class="card-actions">
-                    <a href="deadlock_or_not.html" class="view-btn">Live Demo &rarr;</a>
+                    <a href="pages/OperatingSystem/deadlock_or_not.html" class="view-btn">Live Demo &rarr;</a>
                     <!-- <a href="https://youtu.be/kgQ8NN1S2z8" target="_blank" rel="noopener" class="video-link-btn">
                         <svg viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg>
                         Explanation
@@ -347,7 +358,7 @@
                 <h2 class="card-title">Deadlock Handling by Processes</h2>
                 <p class="card-desc">An interactive visualization showing how processes enter a state of deadlock and resource contention.</p>
                 <div class="card-actions">
-                    <a href="Deadlock_avoid.html" class="view-btn">Live Demo &rarr;</a>
+                    <a href="pages/OperatingSystem/Deadlock_avoid.html" class="view-btn">Live Demo &rarr;</a>
                     <a href="https://youtu.be/kgQ8NN1S2z8" target="_blank" rel="noopener" class="video-link-btn">
                         <svg viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg>
                         Explanation
@@ -364,7 +375,7 @@
                 <h2 class="card-title">Banker's Algorithm</h2>
                 <p class="card-desc">Visualize safety sequences and resource allocation to prevent system deadlock.</p>
                 <div class="card-actions">
-                    <a href="safety_algo.html" class="view-btn">Live Demo &rarr;</a>
+                    <a href="pages/OperatingSystem/safety_algo.html" class="view-btn">Live Demo &rarr;</a>
                     <a href="https://youtu.be/kgQ8NN1S2z8" target="_blank" rel="noopener" class="video-link-btn">
                         <svg viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg>
                         Explanation
@@ -381,7 +392,7 @@
                 <h2 class="card-title">Basic Paging Concept</h2>
                 <p class="card-desc">Understand how logical addresses are mapped to physical memory through page tables.</p>
                 <div class="card-actions">
-                    <a href="paging_Initial_concepts.html" class="view-btn">Live Demo &rarr;</a>
+                    <a href="pages/OperatingSystem/paging_Initial_concepts.html" class="view-btn">Live Demo &rarr;</a>
                     <a href="https://youtu.be/NmdqSa0Uzpw" target="_blank" rel="noopener" class="video-link-btn">
                         <svg viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg>
                         Explanation
@@ -398,7 +409,7 @@
                 <h2 class="card-title">Paging With TLB</h2>
                 <p class="card-desc">Advanced memory management visualization incorporating Translation Lookaside Buffer cache.</p>
                 <div class="card-actions">
-                    <a href="paging.html" class="view-btn">Live Demo &rarr;</a>
+                    <a href="pages/OperatingSystem/paging.html" class="view-btn">Live Demo &rarr;</a>
                     <a href="https://youtu.be/NmdqSa0Uzpw" target="_blank" rel="noopener" class="video-link-btn">
                         <svg viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg>
                         Explanation
@@ -412,14 +423,14 @@
                 <img src="assets/images/coming_soon.jpeg" alt="TLB Paging" loading="lazy">
             </div>
             <div class="card-content">
-                <h2 class="card-title">Comming soon.....</h2>
+                <h2 class="card-title">Coming soon.....</h2>
                 <p class="card-desc">have a good day</p>
                 <div class="card-actions">
-                    <a href="" class="view-btn">Live Demo &rarr;</a>
-                    <a href="" target="_blank" rel="noopener" class="video-link-btn">
+                    <!-- <a href="" class="view-btn">Live Demo &rarr;</a> -->
+                    <!-- <a href="" target="_blank" rel="noopener" class="video-link-btn">
                         <svg viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg>
                         Explanation
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </div>
