--- a/pages/OperatingSystem/disk_scheduling.html
+++ b/pages/OperatingSystem/disk_scheduling.html
@@ -406,7 +406,7 @@
         }
 
         function goHome() {
-            window.location.href = "index.html"; 
+            window.location.href = "../../index.html"; 
         }
 
         function clearAll() {
