--- a/pages/OperatingSystem/paging.html
+++ b/pages/OperatingSystem/paging.html
@@ -130,9 +130,37 @@
         .found-row { background-color: var(--accent-mem) !important; color: #000; }
         .miss-row { background-color: #e74c3c !important; }
 
+        .back-home-btn {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            padding: 10px 16px;
+            background: linear-gradient(135deg, #2c3e50, #34495e);
+            color: #fff;
+            border: none;
+            border-radius: 25px;
+            font-size: 14px;
+            font-weight: 600;
+            cursor: pointer;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            transition: all 0.2s ease;
+            z-index: 1000;
+        }
+
+        .back-home-btn:hover {
+            transform: translateX(-3px);
+            box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+        }
+
+        .back-home-btn:active {
+            transform: scale(0.95);
+        }
     </style>
 </head>
 <body>
+    <button class="back-home-btn" onclick="goHome()">
+        ⬅ Back to Home
+    </button>
 
     <h1>Paging Hardware Simulation</h1>
     <div style="font-size: 0.8rem; color: #888;">Based on Silberschatz Operating System Concepts Diagram</div>
@@ -217,6 +245,11 @@
 
         const canvas = document.getElementById('anim-canvas');
         const ctx = canvas.getContext('2d');
+
+        function goHome() {
+            window.location.href = "../../index.html"; // change if needed
+            // OR use: window.history.back();
+        }
 
         function init() {
             // Setup Page Table
