--- a/pages/OperatingSystem/safety_algo.html
+++ b/pages/OperatingSystem/safety_algo.html
@@ -220,10 +220,37 @@
         .t-red { color: var(--fail); } 
         .t-yellow { color: var(--highlight-check); } 
         .t-blue { color: var(--accent); }
+        .back-home-btn {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            padding: 10px 16px;
+            background: linear-gradient(135deg, #2c3e50, #34495e);
+            color: #fff;
+            border: none;
+            border-radius: 25px;
+            font-size: 14px;
+            font-weight: 600;
+            cursor: pointer;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            transition: all 0.2s ease;
+            z-index: 1000;
+        }
 
+        .back-home-btn:hover {
+            transform: translateX(-3px);
+            box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+        }
+
+        .back-home-btn:active {
+            transform: scale(0.95);
+        }
     </style>
 </head>
 <body>
+    <button class="back-home-btn" onclick="goHome()">
+        ⬅ Back to Home
+    </button>
 
     <h1>Banker's Algorithm Visualizer</h1>
 
@@ -387,6 +414,11 @@
             d.className = `log-entry ${cls}`;
             box.appendChild(d);
             box.scrollTop = box.scrollHeight;
+        }
+
+        function goHome() {
+            window.location.href = "../../index.html"; // change if needed
+            // OR use: window.history.back();
         }
 
         // --- 1. NEED CALCULATION ---
